# EsMS

./: .dockerignore  .gitignore  API_README.md  Dockerfile  INIT_PLAN.md  LICENSE  LICENSE-SCIP  Makefile  QUICKSTART.md  README.md  docker-compose.yml  explore.ipynb  makefile  pyproject.toml
.github/workflows/: test_deterministic_optimizer.yml  test_optimizers.yml
app/: data_loader.py  main.py
config/: data_preparation_config.yaml  data_split.yaml
data/: README.md  explore.ipynb  explore_generated.ipynb
data/data_household_germany/: Dataset_v1.2.0.xlsx  data_preparation_config.yaml
docs/: API_README.md  OPTIMIZATION.md
esms/: __init__.py  utils.py
esms/api/: __init__.py  main.py  routes.py  schemas.py
esms/models/: __init__.py  battery.py
esms/optimization/: __init__.py  base_optimizer.py  optimizer.py  optimizer_LP.py  stochastic_optimizer.py
esms/services/: __init__.py  io_service.py  (+1 more)
examples/: noise_params.yml  sample_BESS.json  sonnenBatterie10.json
household_battery/: policies.py  selection.py
models/: battery.py
optimization/: __init__.py  optimizer.py
scripts/: data_preparation.py  deterministic_optimisation.py  deterministic_optimization.py  deterministic_optimization_long.py  perfect_foresight_optimization.py  realdata_optimisation.py  rt_price_simulation.py  sample_BESS.json  simulate_rt_prices.py  split_holdout.py  stochastic_optimization.py  stochastic_policy_evaluation.py  test_deterministic_optimizer.py
tests/: test_deterministic_optimizer.py  test_generate_daily_scenarios.py  test_stochastic_optimizer.py
(+9 files in other folders)
