[build-system]
requires = ["uv-build>=0.5.0,<0.11"]
build-backend = "uv_build"

[project]
name = "esms"
version = "0.1.0"
description = "Energy optimization using Pyomo."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "pyomo>=6.8.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
]

[tool.uv.build-backend]
module-root = ""
module-name = "esms"
